# LLMOPS

llmops-api/: .env  .gitignore  README.md  pyproject.toml
llmops-api/app/http/: app.py  module.py
llmops-api/config/: config.py
llmops-api/internal/extension/: __init__.py
llmops-api/internal/handler/: app_handler.py
llmops-api/internal/model/: app.py
llmops-api/internal/router/: router.py
llmops-api/internal/server/: http.py
llmops-api/internal/service/: app_service.py
llmops-api/note/: with.md
llmops-api/pkg/sqlalchemy/: sqlalchemy.py
llmops-api/study/Model_IO/output_parser/: 1_base.ipynb
llmops-api/study/prompt/: 1_base.py  3_reuse_template.py
