[project]
name = "llmops-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "injector>=0.22.0",
    "langchain==0.3.27",
    "langchain-community==0.3.27",
    "langchain-deepseek==0.1.4",
    "langchain-openai==0.3.35",
    "openai>=2.7.1",
    "psycopg2>=2.9.11",
    "pytest>=8.4.2",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.3",
]
